crates/icydb-core/tests/ui/db/cursor_module_private.rs
use icydb_core::db::cursor::ContinuationToken;

fn main() {}
